add images and assets folder, rework the code to make sure images are linked to the files

--- a/index.html
+++ b/index.html
@@ -4,11 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://use.typekit.net/pce6vcx.css">
     <title>Milana Wood | Full-Stack Web Engineer</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <header class="header">
+            <h1>Milana Wood
+                <br>
+                <span id="bio">Full-Stack Web Developer/Engineer</span></h1>
+        </header>
+        <div class="project-link">
+            <a href="https://www.bogskincare.com/" class="bog" target="_blank">
+                Bog Skincare<br>
+                Skincare Brand<br>
+                CSS/Shopify/Product Development<br>
+            </a>
+        </div>
+        <div class="project-link">
+            <a href="https://www.gisburneparkestate.co.uk/" class="gpe" target="_blank">
+                Gisburne Park Estate<br>
+                Luxury Accommodation<br>
+                HTML/CSS/Wordpress<br>
+            </a>
+        </div>
+        <div class="project-link">
+            <a href="https://www.onewhale.org/" class="onewhale" target="_blank">
+                OneWhale<br>
+                Non-Profit<br>
+                HTML/CSS/Squarespace<br>
+            </a>
+        </div>
+        <div class="project-link">
+            <a href="" class="dtc" target="_blank">
+                Deuce Tennis Club<br>
+                Portfolio Project<br>
+                HTML/CSS
+            </a>
+        </div>
+        <div class="project-link">
+            <a href="" class="Reading-Rainbow" target="_blank">
+                Reading Rainbow<br>
+                Portfolio Project<br>
+                HTML/CSS
+            </a>
+        </div>
+    </div>
+    <div class="thumb-over"></div>
+    <script src="styles/main.js"></script>
 </body>
 </html>
