--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </a>
         </div>
         <div class="project-link">
-            <a href="" class="Reading-Rainbow" target="_blank">
+            <a href="" class="readingrainbow" target="_blank">
                 Reading Rainbow<br>
                 Portfolio Project<br>
                 HTML/CSS
@@ -52,6 +52,6 @@
         </div>
     </div>
     <div class="thumb-over"></div>
-    <script src="styles/main.js"></script>
+    <script src="styles/main.js" async defer></script>
 </body>
 </html>
