"moved main js file into index section"

--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
         </div>
     </div>
     <div class="thumb-over"></div>
-    <script src="styles/main.js" async defer></script>
+    <script src="main.js" async defer></script>
 </body>
 </html>
