change the x and y axis for thumb over

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/pce6vcx.css">
     <title>Milana Wood | Full-Stack Web Engineer</title>
 </head>
-<body>
+<body class="has-thumb">
     <div class="wrapper">
         <header class="header">
             <h1>Milana Wood
@@ -51,7 +51,7 @@
             </a>
         </div>
     </div>
-    <div class="thumb-over"></div>
+    <div class="thumb-over" style="top: 196px; left: 164px;"></div>
     <script src="main.js" async defer></script>
 </body>
 </html>
