change style in thumb over div

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </a>
         </div>
     </div>
-    <div class="thumb-over" style="top: 196px; left: 164px;"></div>
+    <div class="thumb-over"></div>
     <script src="main.js" async defer></script>
 </body>
 </html>
