reset the css, js an dhtml

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/pce6vcx.css">
     <title>Milana Wood | Full-Stack Web Engineer</title>
 </head>
-<body class="has-thumb">
+<body>
     <div class="wrapper">
         <header class="header">
             <h1>Milana Wood
