added contact info

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             <h1>Milana Wood
                 <br>
                 <span id="bio">Full-Stack Web Developer/Engineer</span></h1>
+                <br>
+                <div class="contactlinks">
+                    <a aria-label="Chat on WhatsApp" href="https://wa.me/447745050594" id="whatsapp"></a>
+                    <a aria-label="Send E-mail" href="milana_mason@me.com" id="email"></a>
+                    <a aria-label="View GitHub" href="https://github.com/milanawood/" id="github"></a>
+                </div>
         </header>
         <div class="project-link">
             <a href="https://www.bogskincare.com/" class="bog" target="_blank">
