added a trial of text moving on a screen

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Milana Wood | Full-Stack Web Engineer</title>
 </head>
 <body>
-    <div class="wrapper">
+    <div id="movableText" class="wrapper">
         <header class="header">
             <h1>Milana Wood
                 <br>
