modified the location of movable text

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Milana Wood | Full-Stack Web Engineer</title>
 </head>
 <body>
-    <div id="movableText" class="wrapper">
-        <header class="header">
+    <div class="wrapper">
+        <header id="movableText" class="header">
             <h1>Milana Wood
                 <br>
                 <span id="bio">Full-Stack Web Developer/Engineer</span></h1>
