added moving letters hopefully

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper">
         <header id="movableText" class="header">
-            <h1>Milana Wood
+            <h1><span class="letter">M</span><span class="letter">i</span><span class="letter">l</span><span class="letter">a</span><span class="letter">n</span><span class="letter">a</span><span class="letter">W</span><span class="letter">o</span><span class="letter">o</span><span class="letter">d</span>
                 <br>
                 <span id="bio">Full-Stack Web Developer/Engineer</span></h1>
                 <br>
