trial of movable text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <header id="movableText" class="header">
+        <header class="header">
             <h1><span class="letter">M</span><span class="letter">i</span><span class="letter">l</span><span class="letter">a</span><span class="letter">n</span><span class="letter">a</span><span class="letter">W</span><span class="letter">o</span><span class="letter">o</span><span class="letter">d</span>
                 <br>
                 <span id="bio">Full-Stack Web Developer/Engineer</span></h1>
@@ -23,9 +23,9 @@
         </header>
         <div class="project-link">
             <a href="https://www.bogskincare.com/" class="bog" target="_blank">
-                Bog Skincare<br>
+                <span id="movableText">Bog Skincare<br>
                 Skincare Brand<br>
-                CSS/Shopify/Product Development<br>
+                CSS/Shopify/Product Development<br></span>
             </a>
         </div>
         <div class="project-link">
