last attempt for the evening for letter scatter

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="wrapper">
-        <header id="header" class="scattered">
-            <h1><span class="letter">M</span><span class="letter">i</span><span class="letter">l</span><span class="letter">a</span><span class="letter">n</span><span class="letter">a</span><span class="letter">W</span><span class="letter">o</span><span class="letter">o</span><span class="letter">d</span>
+        <header id="header">
+            <h1 class="scattered"><span class="letter">M</span><span class="letter">i</span><span class="letter">l</span><span class="letter">a</span><span class="letter">n</span><span class="letter">a</span><span class="letter">W</span><span class="letter">o</span><span class="letter">o</span><span class="letter">d</span>
                 <br>
                 <span id="bio">Full-Stack Web Developer/Engineer</span></h1>
                 <br>
