ok actually last try before bed

--- a/index.html
+++ b/index.html
@@ -21,35 +21,35 @@
                     <a aria-label="View GitHub" href="https://github.com/milanawood/" id="github"></a>
                 </div>
         </header>
-        <div class="project-link" class="scattered">
+        <div class="project-link scattered">
             <a href="https://www.bogskincare.com/" class="bog" target="_blank">
                 <span class="letter">B</span><span class="letter">o</span><span class="letter">g</span><span class="letter"> </span><span class="letter">S</span><span class="letter">k</span><span class="letter">i</span><span class="letter">n</span><span class="letter">c</span><span class="letter">a</span><span class="letter">r</span><span class="letter">e</span><br>
                 Skincare Brand<br>
                 CSS/Shopify/Product Development<br>
             </a>
         </div>
-        <div class="project-link" class="scattered">
+        <div class="project-link scattered">
             <a href="https://www.gisburneparkestate.co.uk/" class="gpe" target="_blank">
                 Gisburne Park Estate<br>
                 Luxury Accommodation<br>
                 HTML/CSS/Wordpress<br>
             </a>
         </div>
-        <div class="project-link" class="scattered">
+        <div class="project-link scattered">
             <a href="https://www.onewhale.org/" class="onewhale" target="_blank">
                 OneWhale<br>
                 Non-Profit<br>
                 HTML/CSS/Squarespace<br>
             </a>
         </div>
-        <div class="project-link" class="scattered">
+        <div class="project-link scattered">
             <a href="" class="dtc" target="_blank">
                 Deuce Tennis Club<br>
                 Portfolio Project<br>
                 HTML/CSS
             </a>
         </div>
-        <div class="project-link" class="scattered">
+        <div class="project-link scattered">
             <a href="" class="readingrainbow" target="_blank">
                 Reading Rainbow<br>
                 Portfolio Project<br>
