--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 <body>
     <div class="wrapper">
         <header id="header">
-            <h1 class="scattered"><span class="letter">M</span><span class="letter">i</span><span class="letter">l</span><span class="letter">a</span><span class="letter">n</span><span class="letter">a</span><span class="letter">W</span><span class="letter">o</span><span class="letter">o</span><span class="letter">d</span>
-                <br>
-                <span id="bio">Full-Stack Web Developer/Engineer</span></h1>
-                <br>
-                <div class="contactlinks">
-                    <a aria-label="Chat on WhatsApp" href="https://wa.me/447745050594" id="whatsapp"></a>
-                    <a aria-label="Send E-mail" href="milana_mason@me.com" id="email"></a>
-                    <a aria-label="View GitHub" href="https://github.com/milanawood/" id="github"></a>
-                </div>
+            <div class="scattered">
+                <div><span class="letter">M</span><span class="letter">i</span><span class="letter">l</span><span class="letter">a</span><span class="letter">n</span><span class="letter">a</span><span class="letter">W</span><span class="letter">o</span><span class="letter">o</span><span class="letter">d</span></div>
+                <div id="bio">Full-Stack Web Developer/Engineer</div>
+            </div>
+            <br>
+            <div class="contactlinks">
+                <a aria-label="Chat on WhatsApp" href="https://wa.me/447745050594" id="whatsapp"></a>
+                <a aria-label="Send E-mail" href="milana_mason@me.com" id="email"></a>
+                <a aria-label="View GitHub" href="https://github.com/milanawood/" id="github"></a>
+            </div>
         </header>
         <div class="project-link scattered">
             <a href="https://www.bogskincare.com/" class="bog" target="_blank">
